--- a/Transportation to snow/templates/index.html
+++ b/Transportation to snow/templates/index.html
@@ -12,6 +12,7 @@
 
     <!-- Bootstrap core CSS -->
     <link href="static/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="static/css/style.css" rel="stylesheet">
 
     <!-- Custom fonts for this template -->
     <link href="static/vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
@@ -26,6 +27,11 @@
     <!-- Custom styles for this template -->
     <link href="static/css/new-age.min.css" rel="stylesheet">
 
+    <!-- load the core Leaflet library and CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.7/leaflet.css" />
+
+
+
   </head>
 
   <body id="page-top">
@@ -33,7 +39,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
       <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="/scrape">Retrieve Resorts Snow Data Now</a>
+        </center><a href="/scrape" class="btn btn-outline btn-m js-scroll-trigger"><h5><b>Retrieve Resorts Snow Data Now!</b></h5></a><center>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           Menu
           <i class="fas fa-bars"></i>
@@ -79,9 +85,11 @@
       <div class="container">
         <div class="row">
         </div>
-            <h2 class="section-heading">Top 10 resorts</h2>
+            <h2 class="section-heading">Top 10 resorts with most snow</h2>
+            <!-- <p>Our app is available on any mobile device! Download now to get started!</p> -->
       <div id="bar"> 
       </div>
+
 
             <div class="badges">
               <a class="badge-link" href="#"><img src="img/google-play-badge.svg" alt=""></a>
@@ -92,16 +100,70 @@
       </div>
     </section>
 
-<!--     <section class="features" id="features">
+   <section class="features" id="features">
       <div class="container">
         <div class="section-heading text-center">
-          <h2>Reserved For Marketing</h2>
-          <p class="text-muted">Check out what you can do with this app theme!</p>
+          <h2>Live Traffic</h2>
+          <!-- <p class="text-muted">Check out what you can do with this app theme!</p> -->
           <hr>
-          <div id="scatter_plot"> 
-      </div> -->
-        </div>
-
+      <!--     <div id="map">  -->
+          <iframe src="/test" id='mapstyle'></iframe>
+      </div>
+      <!--   </div> -->
+        <!-- <div class="row">
+          <div class="col-lg-4 my-auto">
+            <div class="device-container">
+              <div class="device-mockup iphone6_plus portrait white">
+                <div class="device">
+                  <div class="screen">
+                   Demo image for screen mockup, you can put an image here, some HTML, an animation, video, or anything else! -->
+                  <!--   <div id="bar"></div> -->
+                     <!-- <img src="img/demo-screen-1.jpg" class="img-fluid" alt=""> -->
+                 <!--  </div>
+                  <div class="button"> -->
+                    <!-- You can hook the "home button" to some JavaScript events or just remove it -->
+               <!--    </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-8 my-auto">
+            <div class="container-fluid">
+              <div class="row">
+                <div class="col-lg-6">
+                  <div class="feature-item">
+                    <i class="icon-screen-smartphone text-primary"></i>
+                    <h3>Device Mockups</h3>
+                    <p class="text-muted">Ready to use HTML/CSS device mockups, no Photoshop required!</p>
+                  </div>
+                </div>
+                <div class="col-lg-6">
+                  <div class="feature-item">
+                    <i class="icon-camera text-primary"></i>
+                    <h3>Flexible Use</h3>
+                    <p class="text-muted">Put an image, video, animation, or anything else in the screen!</p>
+                  </div>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-lg-6">
+                  <div class="feature-item">
+                    <i class="icon-present text-primary"></i>
+                    <h3>Free to Use</h3>
+                    <p class="text-muted">As always, this theme is free to download and use for any purpose!</p>
+                  </div>
+                </div>
+                <div class="col-lg-6">
+                  <div class="feature-item">
+                    <i class="icon-lock-open text-primary"></i>
+                    <h3>Open Source</h3>
+                    <p class="text-muted">Since this theme is MIT licensed, you can use it commercially!</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div> 
+        </div> -->
       </div>
     </section>
 
@@ -121,7 +183,8 @@
                   </ul>
                 {% endif %}
               </h1>
-
+<!--               <a href="/scrape" class="btn btn-outline btn-xl js-scroll-trigger">Retrieve Resorts Snow Data Now!</a></h2> -->
+          
         </div>
       </div>
       <div class="overlay"></div>
@@ -170,7 +233,7 @@
     </footer>
 
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
-    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.3/leaflet.js" data-require="leaflet@0.7.3" data-semver="0.7.3"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.7/leaflet.js"></script>
     <script type="text/javascript" src="map.js"></script>
 
 
@@ -182,7 +245,8 @@
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
     <!--We need 1 for each plot -->
     <script src="static/js/plots.js"></script>
-    <script src="static/js/map.js"></script> 
+    <script src="static/js/map.js"></script>
+
 
     <!-- Bootstrap core JavaScript -->
     <script src="static/vendor/jquery/jquery.min.js"></script>
@@ -193,6 +257,16 @@
 
     <!-- Custom scripts for this template -->
     <script src="static/js/new-age.min.js"></script>
+
+    <!-- MapQuest Maps plugin for Leaflet and MapQuest Geocoding plugin for Leaflet -->
+    <!-- <script src="https://www.mapquestapi.com/sdk/leaflet/v2.2/mq-map.js?key=uIuPu5IfZnZ8UcwoQ9OxLnos3UvwerYK"></script>
+    <script src="https://www.mapquestapi.com/sdk/leaflet/v2.2/mq-traffic.js?key=uIuPu5IfZnZ8UcwoQ9OxLnos3UvwerYK"></script>
+    <script src="static/js/traffic.js"></script> -->
+
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDQl6XZoSXQ66-ZGVWxwyq3YcaeGuujtYM&callback=initMap"></script>
+    
+
+
 
   </body>
 
